--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,34 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_centerHorizontal="true">
+    android:layout_centerHorizontal="true"
+    android:orientation="vertical">
 
     <EditText
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="120dp"
         android:id="@+id/user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:hint="Username" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="120dp"
+        android:hint="Username"
+        android:textSize="25dp" />
 
 
     <EditText
-        android:layout_marginLeft="15dp"
         android:id="@+id/pass_word"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:hint="Password"/>
+        android:layout_marginLeft="15dp"
+        android:hint="Password"
+        android:textSize="25dp" />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:layout_gravity="center_horizontal"
+        android:onClick="loginButton"
         android:text="Submit"
-        android:onClick="loginButton"/>
+        android:textSize="30dp" />
 
 </LinearLayout>
