--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,6 +10,7 @@
         android:layout_height="150dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="200dp"
+        android:layout_marginTop="20dp"
         android:adjustViewBounds="true"
         android:src="@drawable/profile1" />
 
@@ -36,7 +37,9 @@
                     android:layout_height="60dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/heart_profile" />
 
@@ -61,6 +64,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="10dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/message_profile" />
 
@@ -69,7 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
-                    android:text="Button1" />
+                    android:text="Button2" />
             </LinearLayout>
 
             <LinearLayout
@@ -84,6 +88,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="10dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/contacts_profile" />
 
@@ -92,7 +97,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
-                    android:text="Button1" />
+                    android:text="Button3" />
             </LinearLayout>
 
             <LinearLayout
@@ -108,6 +113,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="10dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/logout_profile" />
 
@@ -116,7 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="false"
-                    android:text="Button1" />
+                    android:text="Logout" />
             </LinearLayout>
 
         </LinearLayout>
